<resources>
    <string name="app_name">ToDo</string>
    <string name="to_do_application">To Do Application</string>
    <string name="add_an_item">Add an Item</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="my_to_do_list">My To Do List</string>
    <string name="clear_list">Clear List</string>
    <string name="no_tasks_available">No Tasks Available</string>
</resources>